--- a/source/form.html
+++ b/source/form.html
@@ -43,123 +43,126 @@
             <h1 class="page-main__title page-main__title--form">Подбор программы</h1>
             <p class="page-main__call-to-action">Заполните анкету и мы подберем программу питания для вашего кота</p>
             <form class="feedback" method="get" action="https://echo.htmlacademy.ru">
-              <fieldset class="feedback__cat-data cat-data">
-                <legend class="cat-data__legend visually-hidden">Данные о коте</legend>
-                <div class="cat-data__name">
-                  <label class="cat-data__label cat-data__label--name" for="feedback-name">имя*:</label>
-                  <input class="cat-data__cat cat-data__cat--name" id="feedback-name" type="text" name="feedback-name"
-                    placeholder="барсик" required="">
-                </div>
-                <div class="cat-data__weight">
-                  <label class="cat-data__label cat-data__label--weight" for="feedback-weight">вес (кг)*:</label>
-                  <input class="cat-data__cat cat-data__cat--weight" id="feedback-weight" type="text"
-                    name="feedback-weight" placeholder="7" required="">
-                </div>
-                <div class="cat-data__years">
-                  <label class="cat-data__label cat-data__label--years" for="feedback-years">возраст (лет):</label>
-                  <input class="cat-data__cat cat-data__cat--years" id="feedback-years" type="text" name="feedback-name"
-                    placeholder="7">
-                </div>
-              </fieldset>
-              <fieldset class="feedback__program-selection program-selection">
-                <legend class="program-selection__legend visually-hidden">Какая именно программа необходима коту?
-                </legend>
-                <ul class="program-selection__list selection-list">
-                  <li class="selection-list__option" tabindex="0">
-                    <input class="selection-list__input visually-hidden" type="radio" name="radio" value="slim"
-                      id="slim" checked="">
-                    <label class="selection-list__label selection-list__label--slim" for="slim">похудение</label>
-                  </li>
-                  <li class="selection-list__option" tabindex="0">
-                    <input class="selection-list__input visually-hidden" type="radio" name="radio" value="weight-gain"
-                      id="weight-gain">
-                    <label class="selection-list__label selection-list__label--weight-gain" for="weight-gain">набор
-                      массы</label>
-                  </li>
-                  <li class="selection-list__option" tabindex="0">
-                    <input class="selection-list__input visually-hidden" type="radio" name="radio" value="need-advice"
-                      id="need-advice">
-                    <label class="selection-list__label selection-list__label--need-advice" for="need-advice">не знаю
-                      (нужен ваш совет)</label>
-                  </li>
-                </ul>
-              </fieldset>
-              <fieldset class="feedback__contacts-request contacts-request">
-                <legend class="contacts-request__legend">Контактные данные (владельца кота)</legend>
-                <div class="contacts-request__wrapper">
-                  <div class="contacts-request__email">
-                    <label class="contacts-request__label contacts-request__label--email"
-                      for="feedback-email">e-mail*:</label>
-                    <input class="contacts-request__user contacts-request__user--email" id="feedback-email" type="email"
-                      name="feedback-email" placeholder="kuklachev@gmail.com" required="">
-                    <?xml version="1.0" encoding="utf-8"?>
-                    <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) -->
-                    <svg class="contacts-request__icon contacts-request__icon--email" version="1.1" id="Layer_1"
-                      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                      viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
-                      <path
-                        d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z" />
-                    </svg>
+              <div class="feedback__wrapper">
+                <fieldset class="feedback__cat-data cat-data">
+                  <legend class="cat-data__legend visually-hidden">Данные о коте</legend>
+                  <div class="cat-data__name">
+                    <label class="cat-data__label cat-data__label--name" for="feedback-name">имя*:</label>
+                    <input class="cat-data__cat cat-data__cat--name" id="feedback-name" type="text" name="feedback-name"
+                      placeholder="барсик" required="">
                   </div>
-                  <div class="contacts-request__phone">
-                    <label class="contacts-request__label contacts-request__label--phone"
-                      for="feedback-phone">телефон*:</label>
-                    <input class="contacts-request__user contacts-request__user--phone" id="feedback-phone" type="tel"
-                      name="feedback-phone" placeholder="8 (960) 900-60-90" required="">
-                    <?xml version="1.0" encoding="utf-8"?>
-                    <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) -->
-                    <svg class="contacts-request__icon contacts-request__icon--phone" version="1.1" id="Layer_1"
-                      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                      viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve">
-                      <path
-                        d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z" />
-                      <path d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7
-                                          c0-0.1,0-0.1,0-0.2V3.1c0-1,0.8-1.8,1.7-1.8c0.1,0,0.1,0,0.2,0h3.7v5H4.4c-0.7,0-1.2,0.6-1.2,1.2h4.4c0.3,0,0.6-0.3,0.6-0.6V0.6
-                                          C8.1,0.3,7.8,0,7.5,0H3.1C1.5-0.1,0.1,1.2,0,2.9C0,3,0,3.1,0,3.1v13.7c-0.1,1.7,1.2,3.1,2.9,3.1c0.1,0,0.2,0,0.2,0h4.4
-                                          C7.8,20,8.1,19.7,8.1,19.4z" />
-                    </svg>
+                  <div class="cat-data__weight">
+                    <label class="cat-data__label cat-data__label--weight" for="feedback-weight">вес (кг)*:</label>
+                    <input class="cat-data__cat cat-data__cat--weight" id="feedback-weight" type="text"
+                      name="feedback-weight" placeholder="7" required="">
                   </div>
+                  <div class="cat-data__years">
+                    <label class="cat-data__label cat-data__label--years" for="feedback-years">возраст (лет):</label>
+                    <input class="cat-data__cat cat-data__cat--years" id="feedback-years" type="text"
+                      name="feedback-name" placeholder="7">
+                  </div>
+                </fieldset>
+                <fieldset class="feedback__program-selection program-selection">
+                  <legend class="program-selection__legend visually-hidden">Какая именно программа необходима коту?
+                  </legend>
+                  <ul class="program-selection__list selection-list">
+                    <li class="selection-list__option" tabindex="0">
+                      <input class="selection-list__input visually-hidden" type="radio" name="radio" value="slim"
+                        id="slim" checked="">
+                      <label class="selection-list__label selection-list__label--slim" for="slim">похудение</label>
+                    </li>
+                    <li class="selection-list__option" tabindex="0">
+                      <input class="selection-list__input visually-hidden" type="radio" name="radio" value="weight-gain"
+                        id="weight-gain">
+                      <label class="selection-list__label selection-list__label--weight-gain" for="weight-gain">набор
+                        массы</label>
+                    </li>
+                    <li class="selection-list__option" tabindex="0">
+                      <input class="selection-list__input visually-hidden" type="radio" name="radio" value="need-advice"
+                        id="need-advice">
+                      <label class="selection-list__label selection-list__label--need-advice" for="need-advice">не знаю
+                        (нужен ваш совет)</label>
+                    </li>
+                  </ul>
+                </fieldset>
+                <fieldset class="feedback__contacts-request contacts-request">
+                  <legend class="contacts-request__legend">Контактные данные (владельца кота)</legend>
+                  <div class="contacts-request__wrapper">
+                    <div class="contacts-request__email">
+                      <label class="contacts-request__label contacts-request__label--email"
+                        for="feedback-email">e-mail*:</label>
+                      <input class="contacts-request__user contacts-request__user--email" id="feedback-email"
+                        type="email" name="feedback-email" placeholder="kuklachev@gmail.com" required="">
+                      <?xml version="1.0" encoding="utf-8"?>
+                      <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) -->
+                      <svg class="contacts-request__icon contacts-request__icon--email" version="1.1" id="Layer_1"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 17 13" style="enable-background:new 0 0 17 13;" xml:space="preserve">
+                        <path
+                          d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z" />
+                      </svg>
+                    </div>
+                    <div class="contacts-request__phone">
+                      <label class="contacts-request__label contacts-request__label--phone"
+                        for="feedback-phone">телефон*:</label>
+                      <input class="contacts-request__user contacts-request__user--phone" id="feedback-phone" type="tel"
+                        name="feedback-phone" placeholder="8 (960) 900-60-90" required="">
+                      <?xml version="1.0" encoding="utf-8"?>
+                      <!-- Generator: Adobe Illustrator 21.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0) -->
+                      <svg class="contacts-request__icon contacts-request__icon--phone" version="1.1" id="Layer_1"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 20 20" style="enable-background:new 0 0 20 20;" xml:space="preserve">
+                        <path
+                          d="M17.9,9.4H9.4v1.2h8.5l-2.1,2.1l0.9,0.9l3.1-3.1c0.2-0.2,0.2-0.6,0-0.9l-3.1-3.1l-0.9,0.9L17.9,9.4z" />
+                        <path d="M8.1,19.4v-6.2c0-0.3-0.3-0.6-0.6-0.6H4.4l0,0H3.1l0,0c0,0.7,0.6,1.2,1.2,1.2h2.5v5H3.1c-1,0.1-1.8-0.7-1.9-1.7
+                                                          c0-0.1,0-0.1,0-0.2V3.1c0-1,0.8-1.8,1.7-1.8c0.1,0,0.1,0,0.2,0h3.7v5H4.4c-0.7,0-1.2,0.6-1.2,1.2h4.4c0.3,0,0.6-0.3,0.6-0.6V0.6
+                                                          C8.1,0.3,7.8,0,7.5,0H3.1C1.5-0.1,0.1,1.2,0,2.9C0,3,0,3.1,0,3.1v13.7c-0.1,1.7,1.2,3.1,2.9,3.1c0.1,0,0.2,0,0.2,0h4.4
+                                                          C7.8,20,8.1,19.7,8.1,19.4z" />
+                      </svg>
+                    </div>
+                  </div>
+                </fieldset>
+                <fieldset class="feedback__comment comment">
+                  <legend class="comment__legend">Комментарий</legend>
+                  <div class="comment__story">
+                    <label class="comment__label visually-hidden" for="field">Ваш комментарий</label>
+                    <textarea class="comment__textfield" name="field" id="field" type="text" rows="6"
+                      placeholder="расскажите обо всех повадках кота"></textarea>
+                  </div>
+                </fieldset>
+                <fieldset class="feedback__addition addition">
+                  <legend class="addition__legend">Дополнительно</legend>
+                  <ul class="addition__list addition-list">
+                    <li class="addition-list__option addition-list__option--sweetener" tabindex="0">
+                      <input class="addition-list__input visually-hidden" type="checkbox" name="checkbox"
+                        value="sweetener" id="sweetener" checked="">
+                      <label class="addition-list__label addition-list__label--sweetener"
+                        for="sweetener">сахарозаменитель</label>
+                    </li>
+                    <li class="addition-list__option" tabindex="0">
+                      <input class="addition-list__input visually-hidden" type="checkbox" name="checkbox"
+                        value="potable-water" id="potable-water">
+                      <label class="addition-list__label addition-list-list__label--potable-water"
+                        for="potable-water">питьевая
+                        вода</label>
+                    </li>
+                    <li class="addition-list__option" tabindex="0">
+                      <input class="addition-list__input visually-hidden" type="checkbox" name="checkbox" value="milk"
+                        id="milk">
+                      <label class="addition-list__label addition-list__label--milk" for="milk">молоко</label>
+                    </li>
+                    <li class="addition-list__option addition-list__option--vitamins" tabindex="0">
+                      <input class="addition-list__input visually-hidden" type="checkbox" name="checkbox"
+                        value="vitamins" id="vitamins">
+                      <label class="addition-list__label addition-list__label--vitamins"
+                        for="red-rocks">витамины</label>
+                    </li>
+                  </ul>
+                </fieldset>
+                <div class="feedback__submit">
+                  <button class="button green-button feedback__send-button" type="submit">отправить заявку</button>
+                  <p class="feedback__note">&ast; &ndash; обязательные поля</p>
                 </div>
-              </fieldset>
-              <fieldset class="feedback__comment comment">
-                <legend class="comment__legend">Комментарий</legend>
-                <div class="comment__story">
-                  <label class="comment__label visually-hidden" for="field">Ваш комментарий</label>
-                  <textarea class="comment__textfield" name="field" id="field" type="text" rows="6"
-                    placeholder="расскажите обо всех повадках кота"></textarea>
-                </div>
-              </fieldset>
-              <fieldset class="feedback__addition addition">
-                <legend class="addition__legend">Дополнительно</legend>
-                <ul class="addition__list addition-list">
-                  <li class="addition-list__option addition-list__option--sweetener" tabindex="0">
-                    <input class="addition-list__input visually-hidden" type="checkbox" name="checkbox"
-                      value="sweetener" id="sweetener" checked="">
-                    <label class="addition-list__label addition-list__label--sweetener"
-                      for="sweetener">сахарозаменитель</label>
-                  </li>
-                  <li class="addition-list__option" tabindex="0">
-                    <input class="addition-list__input visually-hidden" type="checkbox" name="checkbox"
-                      value="potable-water" id="potable-water">
-                    <label class="addition-list__label addition-list-list__label--potable-water"
-                      for="potable-water">питьевая
-                      вода</label>
-                  </li>
-                  <li class="addition-list__option" tabindex="0">
-                    <input class="addition-list__input visually-hidden" type="checkbox" name="checkbox" value="milk"
-                      id="milk">
-                    <label class="addition-list__label addition-list__label--milk" for="milk">молоко</label>
-                  </li>
-                  <li class="addition-list__option addition-list__option--vitamins" tabindex="0">
-                    <input class="addition-list__input visually-hidden" type="checkbox" name="checkbox" value="vitamins"
-                      id="vitamins">
-                    <label class="addition-list__label addition-list__label--vitamins" for="red-rocks">витамины</label>
-                  </li>
-                </ul>
-              </fieldset>
-              <div class="feedback__submit">
-                <button class="button green-button feedback__send-button" type="submit">отправить заявку</button>
-                <p class="feedback__note">&ast; &ndash; обязательные поля</p>
               </div>
             </form>
             <section class="contact-us">
