--- a/source/index.html
+++ b/source/index.html
@@ -46,11 +46,11 @@
       </div>
       <div class="intro__picture-wrapper">
         <picture>
-          <source type="image/webp" media="(min-width: 1300px)"
+          <!--<source type="image/webp" media="(min-width: 1300px)"
             srcset="img/index-can-desktop.webp 1x, img/index-can-desktop@2x.webp 2x">
           <source type="image/webp" media="(min-width: 768px)"
             srcset="img/index-can-tablet.webp 1x, img/index-can-tablet@2x.webp 2x">
-          <source type="image/webp" srcset="img/index-can-mobile.webp 1x, img/index-can-mobile@2x.webp 2x">
+          <source type="image/webp" srcset="img/index-can-mobile.webp 1x, img/index-can-mobile@2x.webp 2x">-->
 
           <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
           <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.png 1x, img/index-can-tablet@2x.png 2x">
@@ -133,11 +133,11 @@
             <li class="demonstration__item demonstration__item--before slider__item">
               <div class="demonstation__slider demonstation__slider--before">
                 <picture>
-                  <source type="image/webp" media="(min-width: 1300px)"
+                  <!--<source type="image/webp" media="(min-width: 1300px)"
                     srcset="img/before-desktop.webp 1x, img/before-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)"
                     srcset="img/before-tablet.webp 1x, img/before-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="img/before-mobile.webp 1x, img/before-mobile@2x.webp 2x">
+                  <source type="image/webp" srcset="img/before-mobile.webp 1x, img/before-mobile@2x.webp 2x">-->
 
                   <source media="(min-width: 1300px)"
                     srcset="img/before-desktop@1x.png 1x, img/before-desktop@2x.png 2x">
@@ -147,7 +147,7 @@
                 </picture>
               </div>
             </li>
-            <li class="demonstration__item demonstration__item--after slider__item">
+            <!--<li class="demonstration__item demonstration__item--after slider__item">
               <div class="demonstation__slider demonstation__slider--after">
                 <picture>
                   <source type="image/webp" media="(min-width: 1300px)"
@@ -162,7 +162,7 @@
                     srcset="img/after-mobile@2x.png 2x" alt="фото кота после приема Кэт Энерджи">
                 </picture>
               </div>
-            </li>
+            </li>-->
           </ul>
           <p class="demonstration__toggles slider__toggles">
             <button class="slider__toggle" type="button"
@@ -189,11 +189,11 @@
                       allowfullscreen="true" style="position:relative;"></iframe></div>-->
           <p>
             <picture>
-              <source type="image/webp" media="(min-width: 1300px)"
+              <!--<source type="image/webp" media="(min-width: 1300px)"
                 srcset="img/bg-map-desktop.webp 1x, img/bg-map-desktop@2x.webp 2x">
               <source type="image/webp" media="(min-width: 768px)"
                 srcset="img/bg-map-tablet.webp 1x, img/bg-map-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="img/bg-map-mobile.webp 1x, img/bg-map-mobile@2x.webp 2x">
+              <source type="image/webp" srcset="img/bg-map-mobile.webp 1x, img/bg-map-mobile@2x.webp 2x">-->
 
               <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png 1x, img/bg-map-desktop@2x.png 2x">
               <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png 1x, img/bg-map-tablet@2x.png 2x">
