--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,6 +9,11 @@
   <meta name="format-detection" content="telephone=no">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <script>
+    // Picture element HTML5 shiv
+    document.createElement("picture");
+  </script>
+  <script src="picturefill.js" async></script>
 </head>
 
 
@@ -51,6 +56,13 @@
             <div class="main-products-list__image main-products-list__image--chicken-small">
               <a href="chicken-small.html">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/chicken-small-mobile@1x.webp 1x, img/chicken-small-mobile@2x.webp 2x">
+
                   <source media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.png 1x,
                     img/chicken-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x,
@@ -94,6 +106,12 @@
             <div class="main-products-list__image main-products-list__image--chicken-big"">
               <a href=" chicken-big.html">
               <picture>
+                <source type="image/webp" media="(min-width: 1300px)"
+                  srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)"
+                  srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/chicken-big-mobile@1x.webp 1x, img/chicken-big-mobile@2x.webp 2x">
+
                 <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x,
                                 img/chicken-big-desktop@2x.png 2x">
                 <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x,
@@ -137,6 +155,12 @@
             <div class="main-products-list__image main-products-list__image--fish-small">
               <a href="fish-small.html">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/fish-small-mobile@1x.webp 1x, img/fish-small-mobile@2x.webp 2x">
+
                   <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.png 1x,
                                                               img/fish-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x,
@@ -178,6 +202,12 @@
             <div class="main-products-list__image main-products-list__image--fish-big">
               <a class="main-products-list__link" href="fish-big.html">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/fish-big-mobile@1x.webp 1x, img/fish-big-mobile@2x.webp 2x">
+
                   <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x,
                                 img/fish-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x,
@@ -219,6 +249,13 @@
             <div class="main-products-list__image main-products-list__image--buckwheat-small">
               <a href="buckwheat-small.html">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/buckwheat-small-mobile@1x.webp 1x, img/buckwheat-small-mobile@2x.webp 2x">
+
                   <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x,
                                               img/buckwheat-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x,
@@ -260,6 +297,13 @@
             <div class="main-products-list__image main-products-list__image--buckwheat-big">
               <a href="buckwheat-big.html">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/buckwheat-big-mobile@1x.webp 1x, img/buckwheat-big-mobile@2x.webp 2x">
+
                   <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png 1x,
                     img/buckwheat-big-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x,
@@ -301,6 +345,12 @@
             <div class="main-products-list__image main-products-list__image--rice-small">
               <a href="rice-small.html">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1300px)"
+                    srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)"
+                    srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/rice-small-mobile@1x.webp 1x, img/rice-small-mobile@2x.webp 2x">
+
                   <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png 1x,
                     img/rice-small-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x,
