--- a/source/form.html
+++ b/source/form.html
@@ -9,6 +9,11 @@
   <meta name="format-detection" content="telephone=no">
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <script>
+    // Picture element HTML5 shiv
+    document.createElement("picture");
+  </script>
+  <script src="picturefill.js" async></script>
 </head>
 
 
