--- a/source/index.html
+++ b/source/index.html
@@ -174,7 +174,8 @@
       </symbol>
     </svg>
   </div>
-  <svg style="display:none">
+
+  <!--<svg style="display:none">
     <symbol viewBox="0 0 22 12" id="icon-vk">
       <path d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
                       	c0,0.1,0,0.6-0.3,0.9c-0.3,0.3-0.8,0.4-0.9,0.4h-1.4c-0.7,0-3.2-0.2-5.4-2.3C2.5,7.1,0.2,2.2,0.1,2C0,1.6-0.1,1.2,0.2,0.9
@@ -235,57 +236,60 @@
         d="M15.6,11.6H1.4V5.8H0V13h17V5.8h-1.4V11.6z M0,0v2.3l8.5,7.1L17,2.3V0H0z M15.6,1.6L8.5,7.5L1.4,1.6V1.4h14.2L15.6,1.6z">
       </path>
     </symbol>
-  </svg>
+  </svg>-->
 
 
   <header class="page-header">
-    <a class="page-header__logo" href="#" aria-label="Логотип сайта Кэт энерджи, главная страница">
-      <picture>
-        <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg" width="203" height="60">
-        <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="59">
-        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
-          alt="Логотип сайта Кэт энерджи">
-      </picture>
-    </a>
-    <nav class="main-nav main-nav--closed main-nav--nojs">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <ul class="main-nav__list site-list site-list-index">
-        <li class="site-list__item site-list__item--current">
-          <a>главная</a>
-        </li>
-        <li class="site-list__item">
-          <a href="catalog.html">каталог продукции</a>
-        </li>
-        <li class="site-list__item">
-          <a href="form.html">подбор программы</a>
-        </li>
-      </ul>
-    </nav>
+    <div class="page-header__wrapper">
+      <a class="page-header__logo" href="#" aria-label="Логотип сайта Кэт энерджи, главная страница">
+        <picture>
+          <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg" width="203" height="60">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="59">
+          <img class="page-header__logo-image" src="img/logo-mobile.svg" width="191" height="39"
+            alt="Логотип сайта Кэт энерджи">
+        </picture>
+      </a>
+      <nav class="main-nav main-nav--closed main-nav--nojs">
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <ul class="main-nav__list site-list site-list-index">
+          <li class="site-list__item site-list__item--current">
+            <a>главная</a>
+          </li>
+          <li class="site-list__item">
+            <a href="catalog.html">каталог продукции</a>
+          </li>
+          <li class="site-list__item">
+            <a href="form.html">подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main class="page-main">
     <section class="intro">
-      <div class="intro__presentation">
-        <h1 class="intro__title">Функциональное<br> питание для котов</h1>
-        <p class="intro__text">занялся собой? займись котом!</p>
+      <div class="intro__wrapper">
+        <div class="intro__presentation">
+          <h1 class="intro__title">Функциональное<br> питание для котов</h1>
+          <p class="intro__text">занялся собой? займись котом!</p>
+        </div>
+        <div class="intro__picture-wrapper">
+          <picture>
+            <source type="image/webp" media="(min-width: 1300px)"
+              srcset="img/index-can-desktop@1x.webp 1x, img/index-can-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)"
+              srcset="img/index-can-tablet@1x.webp 1x, img/index-can-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/index-can-mobile@1x.webp 1x, img/index-can-mobile@2x.webp 2x">
+
+            <source media="(min-width: 1300px)"
+              srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.png 1x, img/index-can-tablet@2x.png 2x">
+            <img class="intro__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x"
+              alt="Рекламный образец продукции компании Кэт энерджи">
+          </picture>
+        </div>
+        <a href="form.html" class="button green-button intro__button">Подобрать программу</a>
       </div>
-      <div class="intro__picture-wrapper">
-        <picture>
-          <source type="image/webp" media="(min-width: 1300px)"
-            srcset="img/index-can-desktop@1x.webp 1x, img/index-can-desktop@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)"
-            srcset="img/index-can-tablet@1x.webp 1x, img/index-can-tablet@2x.webp 2x">
-          <source type="image/webp" srcset="img/index-can-mobile@1x.webp 1x, img/index-can-mobile@2x.webp 2x">
-
-
-
-          <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.png 1x, img/index-can-desktop@2x.png 2x">
-          <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.png 1x, img/index-can-tablet@2x.png 2x">
-          <img class="intro__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x"
-            alt="Рекламный образец продукции компании Кэт энерджи">
-        </picture>
-      </div>
-      <a href="form.html" class="button green-button intro__button">Подобрать программу</a>
     </section>
     <section class="program-type">
       <div class="program-type__wrapper">
